src/test/resources/tests/typeError/structArgumentMismatch.qg

init {
    var = new aStruct(1, 2)
}

run true

input(a,b) true

struct aStruct {
    aVal: number
}